--- a/package.json
+++ b/package.json
@@ -5,23 +5,59 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "analyze": "ANALYZE=true next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --ignore-unknown --no-error-on-unmatched-pattern --write ./ src",
+    "type": "tsc --noEmit --incremental",
+    "format": "pnpm run prettier && pnpm run lint && pnpm run type",
+    "bootstrap": "pnpm install && pnpm run format",
+    "postbuild": "next-sitemap",
+    "sitemap": "next-sitemap",
+    "clean": "find . -type d \\( -name 'node_modules' -o -name '.next' -o -name '.turbo' \\) -prune -exec rm -rf {} +",
+    "svgr": "svgr -d src/components/icons --icon --typescript src/icons --no-prettier && prettier src/components/icons --write",
+    "scripts:checks": "tsx src/scripts/checks.ts"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.2"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "next": "15.1.2",
+    "dotenv": "16.4.7",
+    "@t3-oss/env-core": "0.11.1",
+    "@t3-oss/env-nextjs": "0.11.1",
+    "styled-components": "6.1.13",
+    "tailwind-merge": "2.6.0",
+    "clsx": "2.1.1",
+    "uuid": "11.0.3",
+    "zod": "3.24.1",
+    "zustand": "5.0.2"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
+    "@next/bundle-analyzer": "15.1.2",
+    "@svgr/cli": "8.1.0",
+    "@svgr/webpack": "8.1.0",
+    "typescript": "5.7.2",
+    "@types/node": "22.10.2",
+    "@types/react": "19.0.2",
+    "@tailwindcss/forms": "0.5.9",
+    "@tailwindcss/typography": "0.5.15",
+    "eslint-plugin-storybook": "0.11.1",
+    "eslint-plugin-tailwindcss": "3.17.5",
+    "@types/react-dom": "19.0.2",
+    "postcss": "8.4.49",
+    "next-sitemap": "4.2.3",
+    "prettier": "3.4.2",
+    "prettier-plugin-tailwindcss": "0.6.9",
+    "tailwind-merge": "2.6.0",
+    "tailwind-scrollbar": "3.1.0",
+    "tailwindcss": "3.4.17",
+    "tailwindcss-3d": "1.0.7",
+    "tailwindcss-animate": "1.0.7",
+    "tailwindcss-radix": "3.0.5",
+    "tsx": "4.19.2",
+    "eslint": "9.17.0",
     "eslint-config-next": "15.1.2",
-    "@eslint/eslintrc": "^3"
-  }
+    "@eslint/eslintrc": "3.2.0"
+  },
+  "packageManager": "pnpm@9.15.1"
 }
