--- a/package.json
+++ b/package.json
@@ -16,12 +16,19 @@
     "sitemap": "next-sitemap",
     "clean": "find . -type d \\( -name 'node_modules' -o -name '.next' -o -name '.turbo' \\) -prune -exec rm -rf {} +",
     "svgr": "svgr -d src/components/icons --icon --typescript src/icons --no-prettier && prettier src/components/icons --write",
-    "scripts:checks": "tsx src/scripts/checks.ts"
+    "scripts:checks": "tsx src/scripts/checks.ts",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "next": "15.1.2",
+    "next-nprogress-bar": "2.4.3",
+    "next-themes": "0.4.4",
+    "react-combine-providers": "0.9.6",
     "dotenv": "16.4.7",
     "@t3-oss/env-core": "0.11.1",
     "@t3-oss/env-nextjs": "0.11.1",
@@ -35,11 +42,22 @@
   "devDependencies": {
     "@next/bundle-analyzer": "15.1.2",
     "@svgr/cli": "8.1.0",
+    "@types/jest": "29.5.14",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.1.0",
     "@svgr/webpack": "8.1.0",
     "typescript": "5.7.2",
     "@types/node": "22.10.2",
     "@types/react": "19.0.2",
     "@tailwindcss/forms": "0.5.9",
+    "@chromatic-com/storybook": "3.2.3",
+    "@storybook/addon-essentials": "8.4.7",
+    "@storybook/addon-interactions": "8.4.7",
+    "@storybook/addon-onboarding": "8.4.7",
+    "@storybook/blocks": "8.4.7",
     "@tailwindcss/typography": "0.5.15",
     "eslint-plugin-storybook": "0.11.1",
     "eslint-plugin-tailwindcss": "3.17.5",
@@ -47,6 +65,10 @@
     "postcss": "8.4.49",
     "next-sitemap": "4.2.3",
     "prettier": "3.4.2",
+    "@storybook/nextjs": "8.4.7",
+    "storybook": "8.4.7",
+    "@storybook/react": "8.4.7",
+    "@storybook/test": "8.4.7",
     "prettier-plugin-tailwindcss": "0.6.9",
     "tailwind-merge": "2.6.0",
     "tailwind-scrollbar": "3.1.0",
