--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "clean": "find . -type d \\( -name 'node_modules' -o -name '.next' -o -name '.turbo' \\) -prune -exec rm -rf {} +",
     "svgr": "svgr -d src/components/icons --icon --typescript src/icons --no-prettier && prettier src/components/icons --write",
     "scripts:checks": "tsx src/scripts/checks.ts",
+    "e2e:headless": "playwright test",
+    "e2e:ui": "playwright test --ui",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test": "jest",
@@ -25,7 +27,7 @@
   "dependencies": {
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "next": "15.1.2",
+    "next": "15.1.3",
     "next-nprogress-bar": "2.4.3",
     "next-themes": "0.4.4",
     "react-combine-providers": "0.9.6",
@@ -35,12 +37,15 @@
     "styled-components": "6.1.13",
     "tailwind-merge": "2.6.0",
     "clsx": "2.1.1",
+    "lucide-react": "0.469.0",
+    "react-hook-form": "7.54.2",
+    "class-variance-authority": "0.7.1",
     "uuid": "11.0.3",
     "zod": "3.24.1",
     "zustand": "5.0.2"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "15.1.2",
+    "@next/bundle-analyzer": "15.1.3",
     "@svgr/cli": "8.1.0",
     "@types/jest": "29.5.14",
     "jest": "29.7.0",
@@ -68,6 +73,7 @@
     "@storybook/nextjs": "8.4.7",
     "storybook": "8.4.7",
     "@storybook/react": "8.4.7",
+    "@playwright/test": "1.49.1",
     "@storybook/test": "8.4.7",
     "prettier-plugin-tailwindcss": "0.6.9",
     "tailwind-merge": "2.6.0",
@@ -78,7 +84,7 @@
     "tailwindcss-radix": "3.0.5",
     "tsx": "4.19.2",
     "eslint": "9.17.0",
-    "eslint-config-next": "15.1.2",
+    "eslint-config-next": "15.1.3",
     "@eslint/eslintrc": "3.2.0"
   },
   "packageManager": "pnpm@9.15.1"
