--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "postbuild": "next-sitemap",
     "sitemap": "next-sitemap",
     "clean": "find . -type d \\( -name 'node_modules' -o -name '.next' -o -name '.turbo' \\) -prune -exec rm -rf {} +",
-    "svgr": "svgr -d src/components/icons --icon --typescript src/icons --no-prettier && prettier src/components/icons --write",
+    "svgr": "svgr -d src/components/icons --typescript src/icons --no-prettier && prettier src/components/icons --write",
     "scripts:checks": "tsx src/scripts/checks.ts",
     "e2e:headless": "playwright test",
     "e2e:ui": "playwright test --ui",
@@ -32,6 +32,7 @@
     "next-themes": "0.4.4",
     "react-combine-providers": "0.9.6",
     "dotenv": "16.4.7",
+    "@hookform/resolvers": "3.9.1",
     "@t3-oss/env-core": "0.11.1",
     "@t3-oss/env-nextjs": "0.11.1",
     "styled-components": "6.1.13",
