--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "next": "15.1.3",
+    "react-responsive": "10.0.0",
     "next-nprogress-bar": "2.4.3",
     "next-themes": "0.4.4",
     "react-combine-providers": "0.9.6",
