--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "analyze": "ANALYZE=true next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --fix",
     "prettier": "prettier --ignore-unknown --no-error-on-unmatched-pattern --write ./ src",
     "type": "tsc --noEmit --incremental",
     "format": "pnpm run prettier && pnpm run lint && pnpm run type",
@@ -27,6 +27,11 @@
   "dependencies": {
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "web-vitals": "4.2.4",
+    "@amplitude/analytics-types": "2.8.4",
+    "nextjs-google-analytics": "2.3.7",
+    "@amplitude/analytics-browser": "2.11.10",
+    "@amplitude/experiment-js-client": "1.14.0",
     "next": "15.1.3",
     "react-responsive": "10.0.0",
     "next-nprogress-bar": "2.4.3",
