--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "framer-motion": "11.15.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "web-vitals": "4.2.4",
@@ -38,6 +39,7 @@
     "next-themes": "0.4.4",
     "react-combine-providers": "0.9.6",
     "dotenv": "16.4.7",
+    "@radix-ui/react-tabs": "1.1.2",
     "autoprefixer": "10.4.20",
     "@hookform/resolvers": "3.9.1",
     "@t3-oss/env-core": "0.11.1",
