--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "framer-motion": "11.15.0",
+    "framer-motion": "11.16.0",
+    "lodash": "4.17.21",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "web-vitals": "4.2.4",
@@ -59,6 +60,7 @@
     "@svgr/cli": "8.1.0",
     "@types/jest": "29.5.14",
     "jest": "29.7.0",
+    "@types/lodash": "4.17.14",
     "jest-environment-jsdom": "29.7.0",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
