--- a/package.json
+++ b/package.json
@@ -42,18 +42,20 @@
     "dotenv": "16.4.7",
     "@radix-ui/react-tabs": "1.1.2",
     "autoprefixer": "10.4.20",
-    "@hookform/resolvers": "3.9.1",
+    "@hookform/resolvers": "3.10.0",
     "@t3-oss/env-core": "0.11.1",
     "@t3-oss/env-nextjs": "0.11.1",
     "styled-components": "6.1.14",
     "tailwind-merge": "2.6.0",
     "clsx": "2.1.1",
+    "mongodb": "6.12.0",
+    "mongoose": "8.9.3",
     "lucide-react": "0.469.0",
     "react-hook-form": "7.54.2",
     "class-variance-authority": "0.7.1",
     "uuid": "11.0.4",
     "zod": "3.24.1",
-    "zustand": "5.0.2"
+    "zustand": "5.0.3"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "15.1.3",
@@ -69,13 +71,13 @@
     "typescript": "5.7.2",
     "@types/node": "22.10.5",
     "@types/react": "19.0.3",
-    "@tailwindcss/forms": "0.5.9",
+    "@tailwindcss/forms": "0.5.10",
     "@chromatic-com/storybook": "3.2.3",
     "@storybook/addon-essentials": "8.4.7",
     "@storybook/addon-interactions": "8.4.7",
     "@storybook/addon-onboarding": "8.4.7",
     "@storybook/blocks": "8.4.7",
-    "@tailwindcss/typography": "0.5.15",
+    "@tailwindcss/typography": "0.5.16",
     "eslint-plugin-storybook": "0.11.2",
     "eslint-plugin-tailwindcss": "3.17.5",
     "@types/react-dom": "19.0.2",
