--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
+    "target": "ES2016",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -32,6 +32,7 @@
   },
   "include": [
     "next-env.d.ts",
+    "global.d.ts",
     "**/*.mjs",
     "**/*.ts",
     "**/*.tsx",
